--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "devDependencies": {
     "grunt": "~0.4.0rc7",
     "grunt-contrib-qunit": "~0.1.0",
-    "grunt-contrib-watch": "~0.1.4",
+    "grunt-contrib-uglify": "~0.1.1rc6",
+    "grunt-contrib-watch": "~0.2.0rc7",
+    "grunt-contrib-jshint": "~0.1.1rc6",
     "qunit": "~0.5.15"
   },
   "scripts": {
