--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "test": "test"
   },
   "devDependencies": {
-    "grunt": "~0.4.0rc7",
+    "grunt": "~0.4.0",
     "grunt-contrib-qunit": "~0.1.0",
-    "grunt-contrib-uglify": "~0.1.1rc6",
-    "grunt-contrib-watch": "~0.2.0rc7",
-    "grunt-contrib-jshint": "~0.1.1rc6",
+    "grunt-contrib-uglify": "~0.1.1",
+    "grunt-contrib-watch": "~0.2.0",
+    "grunt-contrib-jshint": "~0.1.1",
     "qunit": "~0.5.15"
   },
   "scripts": {
