--- a/package.json
+++ b/package.json
@@ -1,21 +1,19 @@
 {
-  "name": "handle.js",
-  "version": "0.0.0",
-  "description": "======",
-  "main": "gruntfile.js",
-  "directories": {
-    "test": "test"
-  },
+  "name": "event-expander.js",
+  "version": "0.0.1",
+  "description": "Node expander for delegate implementation.",
+  "main": "gruntfile.coffee",
   "devDependencies": {
     "grunt": "~0.4.0",
-    "grunt-contrib-qunit": "~0.1.0",
     "grunt-contrib-uglify": "~0.1.1",
     "grunt-contrib-watch": "~0.2.0",
     "grunt-contrib-jshint": "~0.1.1",
-    "qunit": "~0.5.15"
+    "qunit": "~0.5.15",
+    "testem": "~0.4.4",
+    "coffee-script": "~1.6.3"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/testem/testem.js -l PhantomJS ci"
   },
   "repository": {
     "type": "git",
@@ -23,6 +21,5 @@
   },
   "author": "1000ch",
   "license": "MIT",
-  "readmeFilename": "README.md",
-  "gitHead": "7a0af041eeb7c187cc0cc196e29d2cee03445f28"
+  "readmeFilename": "README.md"
 }
