--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "event-expander.js",
-  "version": "0.0.1",
-  "description": "Node expander for delegate implementation.",
+  "name": "delegate.js",
+  "version": "0.1.0",
+  "description": "Delegate event.",
   "main": "gruntfile.coffee",
   "devDependencies": {
     "grunt": "~0.4.0",
@@ -17,7 +17,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/1000ch/handle.git"
+    "url": "git://github.com/1000ch/delegate.git"
   },
   "author": "1000ch",
   "license": "MIT",
